Fix header with navigation on mobile

--- a/src/parts/header.less
+++ b/src/parts/header.less
@@ -30,7 +30,6 @@ header.site-header {
 
   .custom-logo-link {
     display: inline-block;
-    min-width: 400px;
 
     img {
       width: @logo-width-small;
