--- a/src/parts/navigation.less
+++ b/src/parts/navigation.less
@@ -21,6 +21,10 @@
     }
   }
 
+  @media (max-width:@screen-md-max) {
+    font-size: 0.8375rem;
+  }
+
   .main-navigation {
     width: auto;
 
